# uv-forge

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CODE_READING_GUIDE.md  CONTRIBUTING.md  FINAL_SUMMARY.md  LICENSE  MANUAL_TEST.md  README.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini  sitemap.xml  theme_builder.py
.claude/: settings.local.json
.dev/: project_builder_rewrite.py  yt_event_handlers.py
.dev/notes/: add-change-checkbox-label-name.md  add-completed-file.md  add-logging.md  add-mutual-framework-capability.md  add-other-frameworks.md  add-remove-folder.md  dialog-warning-banner.md  fixed-help-file.md  git-folder-info.md  git-hub-enhancements.md  refactor-dialogs.md  things-to-fix-add-change.txt  ui-improvements.md  wire_plan.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: q-a.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
app/: main.py
app/config/: logging_config.py
app/core/: __init__.py  async_executor.py  boilerplate_resolver.py  config_manager.py  constants.py  history_manager.py  logging_config.py  models.py  preset_manager.py  project_builder.py  pypi_checker.py  settings_manager.py  state.py  template_loader.py  template_merger.py  ui_state_sync.py  validator.py
app/handlers/: __init__.py  build_handlers.py  event_handlers.py  feature_handlers.py  filesystem_handler.py  folder_handlers.py  git_handler.py  handler_base.py  handler_factory.py  input_handlers.py  option_handlers.py  package_handlers.py  project_builder.py  ui_handler.py  uv_handler.py
app/ui/: components.py  content_dialogs.py  custom_dropdown.py  dialog_data.py  dialogs.py  theme_manager.py  tree_builder.py  ui_config.py
app/utils/: async_executor.py  constants.py
changelog/: index.html
contributing/: index.html
docs/: changelog.md  contributing.md  index.md  installation.md  quickstart.md
docs/guide/: git-integration.md  post-build.md  presets.md  pypi-checker.md  settings.md  templates.md
docs/reference/: architecture.md  frameworks-and-types.md  keyboard-shortcuts.md  troubleshooting.md
docs/stylesheets/: extra.css
guide/git-integration/: index.html
guide/post-build/: index.html
guide/presets/: index.html
guide/pypi-checker/: index.html
guide/settings/: index.html
guide/templates/: index.html
installation/: index.html
quickstart/: index.html
reference/architecture/: index.html
reference/frameworks-and-types/: index.html
reference/keyboard-shortcuts/: index.html
reference/troubleshooting/: index.html
tests/: default.json
tests/core/: test_boilerplate_resolver.py  test_config_manager.py  test_constants.py  test_history_manager.py  test_models.py  test_preset_manager.py  test_project_builder.py  test_pypi_checker.py  test_settings_manager.py  test_state.py  test_state_selection.py  test_template_loader.py  test_template_merger.py  test_validator.py  test_validator_folders.py
tests/handlers/: test_build_handlers.py  test_event_handlers.py  test_feature_handlers.py  test_file_editor.py  test_filesystem_handler.py  test_folder_handlers.py  test_git_handler.py  test_handler_factory.py  test_history_handlers.py  test_input_handlers.py  test_preset_handlers.py  test_ui_handler.py  test_uv_handler.py
tests/ui/: test_dialogs.py
tests/utils/: test_async_executor.py
uv_forge/: __init__.py  main.py
uv_forge/core/: __init__.py  async_executor.py  boilerplate_resolver.py  constants.py  history_manager.py  logging_config.py  models.py  preset_manager.py  settings_manager.py  state.py  template_loader.py  template_merger.py
uv_forge/handlers/: __init__.py  build_handlers.py  feature_handlers.py  filesystem_handler.py  folder_handlers.py  git_handler.py  handler_base.py  input_handlers.py  option_handlers.py  package_handlers.py  project_builder.py  ui_handler.py  uv_handler.py
uv_forge/ui/: components.py  content_dialogs.py  custom_dropdown.py  dialogs.py  theme_manager.py  tree_builder.py
uv_forger/: __init__.py  main.py
uv_forger/core/: __init__.py  boilerplate_resolver.py  constants.py  history_manager.py  logging_config.py  preset_manager.py  settings_manager.py  state.py  template_loader.py  template_merger.py
uv_forger/handlers/: __init__.py  build_handlers.py  feature_handlers.py  filesystem_handler.py  folder_handlers.py  git_handler.py  (+7 more)
(+72 files in other folders)
