[project]
name = "create-project"
version = "0.1.0"
description = "Create configured Python projects from project templates"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flet>=0.80.5",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
]

[project.scripts]
create_project = "app.main:run"

[tool.pytest.ini_options]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers -ra --cov=app --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
markers = [
    "asyncio: marks tests as async (requires pytest-asyncio)",
    "slow: marks tests as slow running",
    "integration: marks tests as integration tests",
]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator (readability preference)
]