[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uv-forger"
version = "0.1.0"
description = "A desktop app for forging Python projects with UV — templates, frameworks, and smart scaffolding"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [{name = "Tim Lang"}]
keywords = ["uv", "python", "project-generator", "scaffolding", "flet", "gui",]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "flet>=0.80.5",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "platformdirs>=4.9.2",
]

[project.urls]
Homepage = "https://github.com/oktl/uv-forge"
Repository = "https://github.com/oktl/uv-forge"
Documentation = "https://oktl.github.io/uv-forge/"
Issues = "https://github.com/oktl/uv-forge/issues"
Changelog = "https://github.com/oktl/uv-forge/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["uv_forge"]


[dependency-groups]
dev = [
    "mkdocs-material>=9.7.5",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
]

[project.scripts]
uv-forger = "uv_forge.main:run"

[tool.pytest.ini_options]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers -ra --cov=uv_forge --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
markers = [
    "asyncio: marks tests as async (requires pytest-asyncio)",
    "slow: marks tests as slow running",
    "integration: marks tests as integration tests",
]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator (readability preference)
]
